# corridor-raiser

./: CMakeLists.txt  README.md  package.xml
config/: corridor_raiser.yaml
launch/: corridor_raiser.launch
plugins/: dynamic_corridor_physics.sdf  dynamic_corridor_visual.sdf
script/: print_walls.py  wall_test.py
src/: corridor_raiser.cpp  corridor_raiser.h  corridor_raiser_node.cpp  corridor_raiser_physics_plugin.cpp  corridor_raiser_physics_plugin.h  corridor_raiser_plugin.cpp.autosave  corridor_raiser_visual_plugin.cpp  corridor_raiser_visual_plugin.h  corridor_rasier_node.h  multi_array_manager.h
